Corrections at extensions section to get the cards centered and aligned correctly. README more considerations

--- a/src/resources/css/extensions.css
+++ b/src/resources/css/extensions.css
@@ -2,7 +2,7 @@
 
 .section--extensions {
   text-align: center;
-  margin: 15vh 6vw 25vw 6vh;
+  margin: 15vh 6vw 25vh 6vw;
 }
 
 .card__container {
